[workspace]
members = ["cae-types", "cae-core", "cae-api"]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.8.2", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "bigdecimal", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8.8"