[workspace]
members = ["cae-types", "cae-core", "cae-api"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
alloy = { version = "1.8.3", features = ["full"] }
alloy-sol-types = "1.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
axum = "0.8.8"
dotenv = "0.15"