[package]
name = "cae-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cae-types = { path = "../cae-types" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }