[package]
name = "cae-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cae-types = { path = "../cae-types" }
alloy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }