[package]
name = "cae-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cae-types = { path = "../cae-types" }
tokio = { workspace = true }
sqlx = { workspace = true }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
dotenv = { workspace = true }